--- a/Q3-Concept.Client/src/pages/Home.css
+++ b/Q3-Concept.Client/src/pages/Home.css
@@ -1,3 +1,8 @@
+@import url("../Components/Sidebar.css");
+
 .container {
-    justify-content:center;
-  }
+  margin-left: 0px;
+  padding-left: 0px;
+  width: 80%;
+  display: inline-block;
+}
